--- a/src/component/admin/admin.less
+++ b/src/component/admin/admin.less
@@ -1,11 +1,12 @@
-.logo{
+.logo {
   width: 100%;
   height: 65px;
   background-color: pink;
-  background: url(https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg) 0 0 no-repeat;
+  background: url(https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg)
+    0 0 no-repeat;
   background-size: 100% 100%;
 }
-.drop-out{
+.drop-out {
   float: right;
   margin: 20px 30px 0 0;
 }
